--- a/rnaseqmetadb/templates/submission.html
+++ b/rnaseqmetadb/templates/submission.html
@@ -13,7 +13,12 @@
 			  <div class="form-group">
 			    <label for="AccessionID" class="col-sm-3 control-label">Accession ID:</label>
 			    <div class="col-sm-5">
-			      <input type="text" class="form-control" name="AccessionID" placeholder="GEO/ArrayExpress Accession ID" required>
+					{% if AccessionID is none %}
+			      		<input type="text" class="form-control" name="AccessionID" placeholder="GEO/ArrayExpress Accession ID" required>
+					{% else %}
+						<input type="text" class="form-control" name="AccessionID" value={{AccessionID}} required>
+					{% endif %}
+					
 			    </div>
 			  </div>
 			  <div class="form-group">
