--- a/rnaseqmetadb/templates/layout.html
+++ b/rnaseqmetadb/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     {% block head %}
-	<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="Developer" content="Designed and developed by Md Abu Obaida, email. tareqbuet@gmail.com">
@@ -13,16 +13,16 @@
     <link rel="stylesheet" href="http://cdn.datatables.net/1.10.7/css/jquery.dataTables.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap/css/bootstrap.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-	<!--[if lt IE 9]>
+    <!--[if lt IE 9]>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='ie8.css') }}" media="screen" />
-  <![endif]-->
+    <![endif]-->
     <script src="{{ url_for('static', filename='bootstrap/js/bootstrap.min.js') }}"></script>
-	
+
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+    <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
     <title>{% block title %}{% endblock %}RNASeqMetaDB</title>
 
@@ -36,166 +36,168 @@
   No data required from back end in this page
   .....-->
   <body>
-  <!--
-  This is a popup modal for accepting terms and policy. User must accept the policy to use the website. It will pop up on window load.
-  -->
-<div class="modal fade" id="terms-modal">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-	  <form action="" method="post" id="terms-form">
-        <h4 class="modal-title">Terms and Conditions</h4>
-      </div>
-      <div class="modal-body">
-     <p>Terms and conditions will come here</p>
-	 <input type="checkbox" id="terms-check"><span> &nbsp I accept the terms and conditions of using the website.</span>
-      </div>
-      <div class="modal-footer">
-         <button type="submit" class="btn btn-primary">Accept</button>
-		 </form>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-  <script type="text/javascript">
-          $(document).ready(function() {
-		  if (typeof(Storage) != "undefined") {
-		  var accepted=localStorage.getItem("terms-accepted");
-		  console.log(accepted);
-		  if(!accepted){
-			$('#terms-modal').modal({
-  keyboard: false,
-  backdrop:'static'
+    <!--
+    This is a popup modal for accepting terms and policy. User must accept the policy to use the website. It will pop up on window load.
+    -->
+    <div class="modal fade" id="terms-modal">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <form action="" method="post" id="terms-form">
+              <h4 class="modal-title">Terms and Conditions</h4>
+            </div>
+            <div class="modal-body">
+              <p>Terms and conditions will come here</p>
+              <input type="checkbox" id="terms-check"><span> &nbsp I accept the terms and conditions of using the website.</span>
+            </div>
+            <div class="modal-footer">
+              <button type="submit" class="btn btn-primary">Accept</button>
+            </form>
+          </div>
+        </div><!-- /.modal-content -->
+      </div><!-- /.modal-dialog -->
+      <script type="text/javascript">
+        $(document).ready(function() {
+            if (typeof(Storage) != "undefined") {
+            var accepted=localStorage.getItem("terms-accepted");
+            var timestamp=localStorage.getItem("timestamp");
+            var timediff=(Date.now()-timestamp)/1000/3600;
+            if((!accepted) || (timediff > 24)){
+            $('#terms-modal').modal({
+keyboard: false,
+backdrop:'static'
 });
-}}
-else{
-alert("try to use updated browser");
-}
-var check=$("#terms-check");
-console.log(check);
-$("#terms-form").on('submit',function(e){
-if(check.prop("checked")){
-$('#terms-modal').modal('hide');
-localStorage.setItem("terms-accepted", true);
-e.preventDefault();
-}
-else{
-alert("You cannot use the website without accepting the terms and conditions");
-e.preventDefault();
-}
+            }}
+            else{
+            alert("try to use updated browser");
+            }
+            var check=$("#terms-check");
+            console.log(check);
+            $("#terms-form").on('submit',function(e){
+              if(check.prop("checked")){
+              $('#terms-modal').modal('hide');
+              localStorage.setItem("terms-accepted", true);
+              localStorage.setItem("timestamp",Date.now());
+              e.preventDefault();
+              }
+              else{
+              alert("You cannot use the website without accepting the terms and conditions");
+              e.preventDefault();
+              }
+              })
 })
-})
-  </script>
+</script>
 </div><!-- /.modal -->
 
-    <div class="main-content gradient">  
+<div class="main-content gradient">  
 
-      <div class="container" style="position: relative">
-        <header class="footer-bg">
-          <div class="row">
-            <!-- Brand and toggle get grouped for better mobile display -->
+  <div class="container" style="position: relative">
+    <header class="footer-bg">
+      <div class="row">
+        <!-- Brand and toggle get grouped for better mobile display -->
 
-            <nav class="navbar-custom navbar navbar-fixed-top " role="navigation"> 
-              <div class="container">
-                <div class="navbar-header">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                  </button>
+        <nav class="navbar-custom navbar navbar-fixed-top " role="navigation"> 
+          <div class="container">
+            <div class="navbar-header">
+              <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+              </button>
 
-                </div>
-                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav">
-                    <li><a href="{{url_for('home')}}">Home <span class="sr-only">(current)</span></a></li>
-                    <li><a href="{{url_for('submission')}}">Dataset Submission</a></li>
-                    <li><a href="{{url_for('statistics')}}">Statistics</a></li>
-                    {% if login_session.get('ismanager') %}
-                    <li><a href="{{url_for('inquiry')}}">Inquiry</a></li>  <!-- Will be visible to only administrator-->
+            </div>
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+              <ul class="nav navbar-nav">
+                <li><a href="{{url_for('home')}}">Home <span class="sr-only">(current)</span></a></li>
+                <li><a href="{{url_for('submission')}}">Dataset Submission</a></li>
+                <li><a href="{{url_for('statistics')}}">Statistics</a></li>
+                {% if login_session.get('ismanager') %}
+                <li><a href="{{url_for('inquiry')}}">Inquiry</a></li>  <!-- Will be visible to only administrator-->
+                {% endif %}
+                <!--					<li><a href="{{url_for('publication')}}">Publications</a></li>-->
+                <li><a href="{{url_for('download')}}">Download</a></li>
+                <li><a href="{{url_for('help')}}">Help</a></li>
+                <li><a href="{{url_for('contactus')}}">Contact Us</a></li>
+              </ul>
+              <ul class="nav navbar-nav navbar-right">
+                <li class="dropdown">
+                  <!-- replace "welcome guest" with logged in username, elase leave it-->
+                  {% if login_session.get('login') is none%}
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Welcome Guest! <span class="caret"></span></a>
+                  {% else %}
+                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Welcome {{login_session.get('user')}}! <span class="caret"></span></a>
+                  {% endif %}
+                  <ul class="dropdown-menu" role="menu">
+                    {% if login_session.get('login') is none %}
+                    <li><a href="{{url_for('login')}}">Login</a></li>
+                    <li><a href="{{url_for('createaccount')}}">Create Account</a></li>
+                    {% else %}
+                    <li><a href="{{url_for('logout')}}">Logout</a></li>
                     {% endif %}
-                    <!--					<li><a href="{{url_for('publication')}}">Publications</a></li>-->
-                    <li><a href="{{url_for('download')}}">Download</a></li>
-					<li><a href="{{url_for('help')}}">Help</a></li>
-                    <li><a href="{{url_for('contactus')}}">Contact Us</a></li>
                   </ul>
-                  <ul class="nav navbar-nav navbar-right">
-                    <li class="dropdown">
-                      <!-- replace "welcome guest" with logged in username, elase leave it-->
-                      {% if login_session.get('login') is none%}
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Welcome Guest! <span class="caret"></span></a>
-                      {% else %}
-                      <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Welcome {{login_session.get('user')}}! <span class="caret"></span></a>
-                      {% endif %}
-                      <ul class="dropdown-menu" role="menu">
-                        {% if login_session.get('login') is none %}
-                        <li><a href="{{url_for('login')}}">Login</a></li>
-                        <li><a href="{{url_for('createaccount')}}">Create Account</a></li>
-                        {% else %}
-                        <li><a href="{{url_for('logout')}}">Logout</a></li>
-                        {% endif %}
-                      </ul>
-                    </li>
-                  </ul>
-                </div>
-              </div> <!-- close container -->
-            </nav>
-          </div><!-- close .row -->
-        </header>
-        <div class="row">
-          <div class="col-md-12">
-            <div class='banner space '>
-              <img class="img-responsive" src="{{url_for('static',filename='resources/img/rna_banner2.png')}}">
-            </div>   
-          </div>
-
-        </div>
+                </li>
+              </ul>
+            </div>
+          </div> <!-- close container -->
+        </nav>
+      </div><!-- close .row -->
+    </header>
+    <div class="row">
+      <div class="col-md-12">
+        <div class='banner space '>
+          <img class="img-responsive" src="{{url_for('static',filename='resources/img/rna_banner2.png')}}">
+        </div>   
       </div>
 
-      <div class="container white-bg">
-	  <div class='row'>
-	  <div class="col-sm-12">
-	           
-            {% with messages = get_flashed_messages() %}
-            {% if messages %}
-             <div class = 'flash alert alert-danger'>
-              {% for message in messages %}
-              <p class="text-center"> {{ message }} </p>
-              {% endfor %}
-            </div>
-            {% endif %}
-            {% endwith %}
-          
-	  </div>
-	  </div>
+    </div>
+  </div>
 
+  <div class="container white-bg">
+    <div class='row'>
+      <div class="col-sm-12">
+
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div class = 'flash alert alert-danger'>
+          {% for message in messages %}
+          <p class="text-center"> {{ message }} </p>
+          {% endfor %}
+        </div>
+        {% endif %}
+        {% endwith %}
+
+      </div>
+    </div>
+
+    <div class="row">
+
+      {% block content %}{% endblock %}
+      {% block footer %}
+    </div><!-- close .row -->
+  </div><!-- close .container -->
+
+  <footer id="colophon" class="site-footer" role="contentinfo">
+    <div class="container white-bg">
+      <div>
         <div class="row">
+          <div class="col-md-12">
+            <div class="site-info">
+              <p style="text-align: center; margin: 10px;">All Content &copy 2015, RNASeqMetaDB, All Rights Reserved</p>
 
-          {% block content %}{% endblock %}
-          {% block footer %}
-        </div><!-- close .row -->
-      </div><!-- close .container -->
+            </div><!-- close .site-info -->
 
-      <footer id="colophon" class="site-footer" role="contentinfo">
-        <div class="container white-bg">
-          <div>
-            <div class="row">
-              <div class="col-md-12">
-                <div class="site-info">
-                  <p style="text-align: center; margin: 10px;">All Content &copy 2015, RNASeqMetaDB, All Rights Reserved</p>
-
-                </div><!-- close .site-info -->
-
-              </div>	
-            </div>
-          </div>
-        </div><!-- close .container -->
-      </footer><!-- close #colophon -->
-      <script>
-        $(document).ready(function() {
-            $('a[href="' + this.location.pathname + '"]').parent().addClass('active');
-            });
-          </script>
-          {% endblock %}
+          </div>	
+        </div>
+      </div>
+    </div><!-- close .container -->
+  </footer><!-- close #colophon -->
+  <script>
+    $(document).ready(function() {
+        $('a[href="' + this.location.pathname + '"]').parent().addClass('active');
+        });
+</script>
+{% endblock %}
         </div>
       </body>
     </html>
